fix bug cutting off text

--- a/src/app/albums/album-display/album-display.component.css
+++ b/src/app/albums/album-display/album-display.component.css
@@ -26,6 +26,7 @@
 }
 
 .artist-link-text {
+   height: 1.25rem;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
